# autopoiesis

./: .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md  opencode.json
architecture/: 00-overview.md  01-simulation-engine.md  02-rule-system.md  03-lattice-and-scalars.md  04-isosurface-meshing.md  05-camera-and-projection.md  06-webgl-pod.md  07-stochastic-rdme-mvp.md  08-wasm-threads.md  09-adapt-rdme-to-threads.md  11-excitable-media.md  12-replicator-mutator-reaction-diffusion.md  13-continuous-cellular-automata.md  14-audio-synthesis.md
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: cahn_hilliard.rs  excitable_media.rs  gray_scott.rs  lenia.rs  lib.rs  math.rs  meshing.rs  rdme.rs  replicator_mutator.rs  sim.rs
web/: camera.js  compute_worker.js  config.js  index.html  main.js  mesh_worker.js  msg_types.js  music.js  shaders.js  sim_defaults.js  sim_worker.js  style.css  synth.js  worker_tuning.js
