[package]
name = "abiogenesis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# In-WASM parallelism (requires crossOriginIsolated + SharedArrayBuffer in the browser).
rayon = "1.10"
wasm-bindgen-rayon = { version = "1.2", features = ["nightly"] }

